Fixed logout button being covered up

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -55,6 +55,10 @@ nav a {
   height: 25px;
 }
 
+.logout {
+  z-index: 20;
+}
+
 @media (min-width: 768px) {
   .navbar-brand.abs
       {
